--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
         <script src="jquery.min.js"></script>
         <script src="fireworks.js"></script>
 		<script src="index.js"></script>
-		
+        
+        <script src="analytics.js"></script>		
         <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+        
         <link href="index.css" type="text/css" rel="stylesheet"/>
     </head>
 	<body>
